Added support for external font files